<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:padding="8dp">


    <TextView
        android:id="@+id/tv_chat_received"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:background="@drawable/background_left_receiver"
        android:maxWidth="270dp"
        android:padding="14dp"
        android:text="@string/a_sample_message"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_chat_time_received"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/tv_chat_received"
        android:layout_centerVertical="true"
        android:layout_marginStart="7dp"
        android:textSize="12sp"
        android:text="@string/_9_00_pm"
        android:textColor="@color/white"
        android:alpha="0.5"/>
    <TextView
        android:id="@+id/tv_seen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_chat_received"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="4dp"
        android:text="@string/seen"
        android:textSize="12sp"
        android:visibility="gone">

    </TextView>
</RelativeLayout>