<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.LoginActivity"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        android:weightSum="7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="330dp"
            android:layout_height="0dp"
            android:layout_weight="2.5"
            android:background="@drawable/ic_background_welcome_screen"
            android:padding="5dp" />

        <TextView
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:autoSizeTextType="uniform"
            android:fontFamily="@font/kaushan"
            android:text="@string/hi_there"
            android:textStyle="bold"
            android:textColor="@color/white"
            tools:targetApi="o" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25"
            android:autoSizeTextType="uniform"
            android:fontFamily="@font/kaushan"
            android:lineSpacingExtra="0.1sp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/log_in_to_continue"
            android:textSize="25sp"
            android:textColor="@color/white"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/et_login_email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="35dp"
            android:layout_weight="0.31"
            android:background="@drawable/background_email_password"
            android:hint="@string/email"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textColorHint="#A9A8BC"
            android:fontFamily="@font/kaushan"
            />

        <EditText
            android:id="@+id/et_login_password"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="28dp"
            android:layout_weight="0.31"
            android:background="@drawable/background_email_password"
            android:hint="@string/password"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textColorHint="#A9A8BC"
            android:fontFamily="@font/kaushan"
            android:inputType="textPassword" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>