<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".view.ui.SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        android:weightSum="7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="330dp"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="2.5"
            android:background="@drawable/ic_signup_background"
            android:padding="5dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:autoSizeTextType="uniform"
            android:fontFamily="@font/kaushan"
            android:paddingTop="10dp"
            android:text="@string/welcome_sign"
            android:textColor="@color/white"
            android:textStyle="bold"
            tools:targetApi="o" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25"
            android:autoSizeTextType="uniform"
            android:fontFamily="@font/kaushan"
            android:lineSpacingExtra="0.1sp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/sign_up_here"
            android:textColor="@color/white"
            android:textSize="25sp"
            tools:targetApi="o" />

        <EditText

            android:id="@+id/et_signin_username"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="30dp"
            android:layout_weight="0.35"
            android:background="@drawable/background_email_password"
            android:drawableStart="@drawable/ic_username"
            android:drawablePadding="30dp"
            android:fontFamily="@font/kaushan"
            android:hint="Username"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/white"
            android:textColorHint="#A9A8BC"
            android:textStyle="bold" />

        <EditText

            android:id="@+id/et_signin_email"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="30dp"
            android:layout_weight="0.35"
            android:background="@drawable/background_email_password"
            android:drawableStart="@drawable/ic_mail_outline"
            android:drawablePadding="30dp"
            android:fontFamily="@font/kaushan"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/white"
            android:textColorHint="#A9A8BC"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_signin_password"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="30dp"
            android:layout_weight="0.35"
            android:background="@drawable/background_email_password"
            android:drawableStart="@drawable/ic_lock_outline_black_24dp"
            android:drawablePadding="30dp"
            android:fontFamily="@font/kaushan"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/white"
            android:textColorHint="#A9A8BC"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_signin"
            android:layout_width="140dp"
            android:layout_height="0dp"
            android:layout_marginTop="48dp"
            android:layout_weight="0.365"
            android:background="@drawable/button_backgorund"
            android:drawableEnd="@drawable/ic_chevron_forward_circle_outline"
            android:fontFamily="@font/kaushan"
            android:gravity="center_vertical"
            android:paddingStart="15dp"
            android:paddingEnd="10dp"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>