<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/profile_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/profile"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_profile_bottom_sheet"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@color/grey"
                android:layout_below="@id/profile_text"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"/>


            <TextView
                android:id="@+id/tv_profile__bottom_sheet_fragment_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_profile_bottom_sheet"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="15dp"
                android:padding="2dp"
                android:text="@string/s"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="15dp"/>


            <TextView
                android:id="@+id/tv_profile_bottom_sheet_fragment_bio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_profile__bottom_sheet_fragment_username"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/background_bio"
                android:gravity="top"
                android:maxLength="100"
                android:maxLines="6"
                android:minLines="6"
                android:padding="25dp"
                android:text="@string/hey_there"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>