<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <EditText
                android:id="@+id/et_user_input_bottom_sheet_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/background_edit_text"
                android:hint="@string/your_text_here"
                android:padding="10dp"
                android:textSize="15sp"
                android:focusedByDefault="true"
                android:focusable="true"
                android:clickable="true"
                android:contextClickable="true" />

            <TextView
                android:id="@+id/btn_save_bottom_sheet"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_user_input_bottom_sheet_fragment"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/button_bottom_sheet_background"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/btn_cancel_bottom_sheet"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_user_input_bottom_sheet_fragment"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="8dp"
                android:layout_toStartOf="@id/btn_save_bottom_sheet"
                android:background="@drawable/button_bottom_sheet_background"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/black" />


        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>