<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".view.ui.ForgetPasswordActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_forget_pwd_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_back_button_forget_pwd_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:foreground="?selectableItemBackground"
                android:padding="16dp"
                android:src="@drawable/ic_arrow_back_black_24dp"
                android:tint="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:layout_toEndOf="@id/iv_back_button_forget_pwd_layout"
                android:padding="2dp"
                android:text="@string/reset_password"
                android:textColor="#fff"
                android:textStyle="bold" />

        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_below="@+id/toolbar_forget_pwd_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <ImageView
                android:id="@+id/iv_bg_forget_pwd"
                android:layout_width="match_parent"
                android:layout_height="210dp"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"
                android:src="@drawable/ic_password" />

            <EditText
                android:id="@+id/et_email_to_reset"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/iv_bg_forget_pwd"
                android:layout_marginStart="25dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/background_edit_text_search"
                android:drawableStart="@drawable/ic_mail_outline"
                android:drawablePadding="30dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="5dp"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                android:textColor="@color/black"
                android:textColorHint="#A9A8BC"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btn_reset"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_below="@id/et_email_to_reset"
                android:layout_marginStart="25dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/button_background"
                android:gravity="center"
                android:text="@string/reset"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_reset"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="25dp"
                android:textSize="14sp"
                android:text="@string/by_clicking_reset_you_will_receive_an_email_n_to_reset_your_password"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_marginBottom="20dp">

            </TextView>


        </RelativeLayout>


    </ScrollView>

</RelativeLayout>